# p1-NEW-NEW

P1 Project/P1 Prototype/: CMakeLists.txt  load_user.c
P1 Project/P1 Prototype/Emils Prototype/: main.c  memory.c  memory.h  menu.c  menu.h  settings.h  utilities.c  utilities.h
P1 Project/P1 Prototype/Emils Prototype/Databases/: Shoppinglist.txt
P1 Project/P1 Prototype/Lists/: shoppinglist.txt
P1 Project/P1 Prototype/Mathiases Prototype/: distance.c  file_management.c  file_management.h  load_user.c  main.h  run_time.c  run_time.h
P1 Project/P1 Prototype/Mathiases Prototype2/: distance.c  distance.h  file_management.c  file_management.h  main.c  main.h  run_time.c  run_time.h
